BUG: _static/css: fix navbar / footer overlap

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -75,19 +75,4 @@ footer {
     border: 1px solid #e7e7e7;
     margin-top: -1px;
 }
-/* TODO: responsive break */
-@media (min-width: 767px) {
-    #content-wrapper {
-        left: 25%;
-    }
-
-    #navbar-related, footer {
-        padding-left: 25%;
-    }
-
-    footer {
-        width: inherit;
-    }
-}
-
 
