--- a/docs/_static/css/local.css
+++ b/docs/_static/css/local.css
@@ -71,24 +71,19 @@ footer {
     opacity: 0.7;
 }
 
-body > div.container-fluid > div:nth-child(1) > div.col-md-9 {
+#content-wrapper {
     background: white;
     border: 1px solid #e7e7e7;
     margin-top: -1px;
 }
-/* TODO: responsive break */
+
+
+/* leftnavbar.css */
 @media (min-width: 767px) {
-    body > div.container-fluid > div:nth-child(1) > div.col-md-9 {
+    #content-wrapper, div.footer-relbar, footer {
+        position: relative;
         left: 25%;
-    }
-
-    #navbar-related, footer {
-        padding-left: 25%;
-    }
-
-    footer {
-        width: inherit;
+        width: 75%;
     }
 }
-
 
